--- a/configs/akira/wofi.style.css
+++ b/configs/akira/wofi.style.css
@@ -8,7 +8,7 @@ window {
   background-color: #1A1B26;
   color: #C0CAF5;
   border: 1px solid #F7768E; /* Red neon border */
-  font-family: JetBrains Mono, monospace;
+  font-family: JetBrainsMono Nerd Font Mono, monospace;
   font-size: 12px;
 }
 
