--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -1,9 +1,3 @@
-/* ===========================
-   Akira Theme (Tokyo Night)
-   Waybar
-   =========================== */
-
-/* Global */
 * {
   font-family: JetBrainsMono Nerd Font Mono, monospace;
   font-size: 12px;
@@ -14,7 +8,6 @@ window#waybar {
   background-color: #1A1B26; /* Dark background */
 }
 
-/* Workspaces */
 #workspaces button {
   background: transparent;
   color: #C0CAF5;
@@ -32,13 +25,16 @@ window#waybar {
   color: #1A1B26;
 }
 
-/* Modules (clock, battery, etc) */
-#clock, #battery, #network, #pulseaudio {
+#clock {
   padding: 0 10px;
 }
 
-/* Hover effect for modules */
-#clock:hover, #battery:hover, #network:hover, #pulseaudio:hover {
+#battery, #network, #pulseaudio, #cpu, #bluetooth {
+  padding: 0 10px;
+  font-size: 16px;
+}
+
+#clock:hover, #battery:hover, #network:hover, #pulseaudio:hover, #cpu:hover, #bluetooth:hover {
   background: #414868;
   border-radius: 0px;
 }
