--- a/configs/waybar/style.css
+++ b/configs/waybar/style.css
@@ -43,7 +43,8 @@ window#waybar {
 #bluetooth,
 #memory,
 #temperature,
-#clock {
+#clock,
+#custom-notifications {
   padding: 0 15px;
 }
 
@@ -55,7 +56,8 @@ window#waybar {
 #bluetooth:hover,
 #memory:hover,
 #temperature:hover,
-#gamemode:hover {
+#gamemode:hover,
+#custom-notifications:hover {
   background: #414868;
   border-radius: 0px;
 }
